fix: backdrop blur not working when header open on safari
backdrop filter on parent element causes backdrop filter not working

--- a/src/app/[locale]/layout.css
+++ b/src/app/[locale]/layout.css
@@ -44,7 +44,6 @@ header {
   padding: 0 1rem;
   align-content: center;
   z-index: 99;
-  backdrop-filter: blur(1px);
 }
 
 main {
